--- a/manic/4_method.tex
+++ b/manic/4_method.tex
@@ -25,4 +25,4 @@ To measure current for logic and SRAM, a digital multimeter (Agilent 34405a, Agi
 % 
 For MRAM, a source meter unit (Keithley 2401) is used. 
 % 
-Timing information (i.e. program start and program end) are transmitted from the chip via I2C to an Arduino and then to a computer.
+Timing information (i.e. program start and program end) are transmitted from the chip via $I^2 C$ to an Arduino and then to a computer.
