--- a/manic/6_discuss.tex
+++ b/manic/6_discuss.tex
@@ -38,4 +38,4 @@ For example, one instruction could be operating on benchmark data, while another
 
 \manic's high switching activity is solved by \snafu (~\autoref{chapter:snafu}) and \riptide (~\autoref{chapter:riptide}).
 % 
-\riptide and \snafu are ULP CGRAs that leverage spatial dataflow to minimize switching activity by effectively duplicating and then dividing-up pipeline resources.
+\riptide and \snafu are ULP CGRAs that leverage spatial dataflow to minimize switching activity by effectively duplicating and dedicating resources to a single operation throughout a kernel's execution.
