--- a/riptide/3_compiler.tex
+++ b/riptide/3_compiler.tex
@@ -106,7 +106,7 @@ data-dependence orderings.
 
 To simplify its OG, \riptidecomp uses transitive reduction (TR)~\cite{aho-tr}, which prior work
 deployed to simplify ordering relation graphs for parallel
-execution of loops~\cite{midkiff-padua,compiler-sync}.
+execution of loops~\cite{midkiff-padua,midkiff1987compiler}.
 %
 We apply TR to the OG, which converts a (potentially cyclic) ordering 
 graph into an acyclic graph of strongly connected components (the SCCDAG). 
