--- a/snafu/0_intro.tex
+++ b/snafu/0_intro.tex
@@ -2,7 +2,7 @@ The opportunity for tiny, ULP devices is enormous~\cite{lucia2017intermittent}, 
 % 
 Prior chapters have presented progress on this challenge, contributing to a new ULP sensor system stack.
 % 
-\autoref{chapter:sonic} described softwate to enable machine inference on commodity MCUs and \autoref{chapter:manic} proposed \manic and \msilicon, a new computer architecture and silicon prototype, respectively.
+\autoref{chapter:sonic} described software to enable machine inference on commodity MCUs and \autoref{chapter:manic} proposed \manic and \msilicon, a new computer architecture and silicon prototype, respectively.
 % 
 \manic is an energy-efficient vector-dataflow co-processor that is a big improvement over COTS devices.
 % 
