--- a/sonic/4_sonic.tex
+++ b/sonic/4_sonic.tex
@@ -124,7 +124,7 @@ memory \emph{without backing either up}.  When a loop continuation task restarts
 control variables, however, retain their state and the loop continues from the
 last attempted iteration.
 % (Pseudocode for \sonic's loop continuation can be found in our technical report~\cite{sonic-arxiv}.)
-\graham{appendix item? pseudocde for sonic's loop continuation}
+% \graham{appendix item? pseudocde for sonic's loop continuation}
 
 \figSONICLoopContinuation
 
