--- a/manic/3_silicon.tex
+++ b/manic/3_silicon.tex
@@ -49,7 +49,7 @@ Also since it can be fabricated in the same process as logic the use of eMRAM av
 % 
 Further, there is a separate SRAM and logic power domains for each design and the eMRAM modules can be power-gated on disabled designs, isolating the module of the active design.
 % 
-This separation allows for near-complete isolation of an active design, which is critical to accurately determinining the energy consumption of that design.
+This separation allows for near-complete isolation of an active design, which is critical to accurately determining the energy consumption of that design.
 
 \subsection{Verification and bring-up of \msilicon}
 Verification of chip design is the most important step in the tape-out process.
