--- a/refs.bib
+++ b/refs.bib
@@ -10488,16 +10488,15 @@ series = {ASPLOS '17}
   pages={710-723},
   doi={10.1109/HPCA.2018.00066}
 }
-
-@article{compiler-sync
-  author={Midkiff, Samuel P. and Padua, David A.},
-  journal={IEEE Transactions on Computers},
-  title={Compiler Algorithms for Synchronization},
-  year={1987},
-  volume={C-36},
+@article{midkiff1987compiler,
+  title={Compiler algorithms for synchronization},
+  author={Midkiff, Samuel P and Padua, David A},
+  journal={IEEE Transactions on computers},
+  volume={100},
   number={12},
-  pages={1485-1495},
-  doi={10.1109/TC.1987.5009499}
+  pages={1485--1495},
+  year={1987},
+  publisher={IEEE}
 }
 
 @inproceedings{surbatovich2021automatically,
