--- a/manic/3_silicon.tex
+++ b/manic/3_silicon.tex
@@ -88,7 +88,7 @@ These built-in safeguards are not only important for debugging, but also protect
 \paragraph{Programming and communication with the chip} 
 To program and communicate with the \msilicon prototype, we co-developed an Arduino-based programmer with \msilicon's bootloader using an FPGA implementation of \msilicon.
 % 
-The Arduino-based programmer converts serial commands to $I^2 C$ commands; passing data to and from the computer to the testchip.
+The Arduino-based programmer converts serial commands to $I^2 C$ commands, passing data to and from the computer to the testchip.
 % 
 Programming is initiated by the testchip which asks the programmer for the application size.
 % 
