added riptide end2end

--- a/7_future.tex
+++ b/7_future.tex
@@ -6,6 +6,7 @@ In particular, the success of \snafu and \riptide make it possible to consider r
 % 
 This chapter will discuss future work on improving area efficiency, performance, and compilation in the context of CGRAs.
 
+\figProgress
 \section{Quantifying the progress made}
 \graham{Graph here showing MSP430 NN, SCALAR NN, RIPTIDE NN}
 
